# pyscript

./: MANIFEST.in  README.md  changelog.md  pyproject.toml  pys.py  pyscript-logo.pys  requirements.txt  setup.py  test.ipynb  test.py  test.pys
docs/: index.md  shell.html  test.py
docs/builtins/: index.md
docs/builtins/builtins/: breakpoint.md  ce.md
docs/syntax/: index.md
docs/syntaxes/: index.md
docs/syntaxes/expressions/: arithmetic.md  func-constructor.md  ternary.md  tuple.md  walrus.md
examples/: add-bitwise.pys  all-test.pys  breadth-first-search.pys  builtins-manipulation.pys  cube.pys  custom-base.pys  denxor.pys  factorial.pys  fibonaci.pys  fractal-tree-turtle.pys  get-builtins.pys  guess-the-number.pys  kalkulator.pys  logarithm.pys  mathematical-constants.pys  maximum-nesting.pys  minesweeper.pys  object-detection-with-yolo.pys  oop.pys  pygame-snake.pys  sha256.pys  simple-calculator.pys  simple-camera.pys  snake.pys  trigonometry.pys
examples/package/: mypack.pys
examples/simple-package/: main.pys
highlight/acode/: LICENSE  README.md  changelog.md  esbuild.config.mjs  pack-zip.js  package-lock.json  package.json  plugin.json  tsconfig.json
highlight/acode/src/: highlight.js  main.js  snippets.js
highlight/nano/: README.md  pyscript.nanorc
highlight/pyslang/: README.md  changelog.md  package.json  vsc-extension-quickstart.md
highlight/pyslang/icons/: pysicon.json
highlight/pyslang/scripts/: extensions.js
highlight/pyslang/snippets/: pyscript.json  pyslang.json
highlight/pyslang/syntaxes/: pyscript.json  pyscript.tmLanguage.json
highlight/vscode/: README.md  changelog.md  language-configuration.json  package.json
highlight/vscode/snippets/: pyscript.json
highlight/vscode/syntaxes/: pyscript.json
pyscript/: __init__.py  __init__.pyi  __main__.py  syntax.pys.json  this.py
pyscript/core/: __init__.py  analyzer.py  bases.py  buffer.py  cache.py  checks.py  constants.py  context.py  exceptions.py  handlers.py  highlight.py  interpreter.py  lexer.py  mapping.py  nodes.py  objects.py  parser.py  position.py  pysbuiltins.py  pystypes.py  results.py  runner.py  shell.py  singletons.py  symtab.py  token.py  utils.py  validator.py  values.py  version.py
pyscript/core/editor/: __init__.py  bases.py  gui.py  terminal.py
pyscript/core/utils/: __init__.py  ansi.py  debug.py  decorators.py  generic.py  jsdict.py  module.py  path.py  shell.py  similarity.py  string.py
pyscript/lib/: __hello__.pys  brainfuck.pys  dis.pys  explorer.pys  fpstimer.pys  history.pys  inspect.pys  jsdict.pys  keyword.pys  parser.pys  pdisplay.pys  site.pys  symtable.pys  sys.pys  this.pys  token.pys  tokenize.pys
pyscript/lib/_tantee/: __init__.pys
pyslang/: README.md  changelog.md  language-configuration.json  package.json  vsc-extension-quickstart.md
pyslang/snippets/: pyslang.json
pyslang/syntaxes/: pyscript.tmLanguage.json
syntax/: indonesian.syntax.pys.json
(+11 files in other folders)
