[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscript-programming-language"
version = "1.12.5"
description = "PyScript Programming Language"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"

authors = [
    { name = "azzammuhyala", email = "azzammuhyala@gmail.com" }
]

keywords = [
    "pyscript",
    "pyslang",
    "pys",
    "programming",
    "language",
    "programming language"
]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Compilers"
]

[project.urls]
Homepage = "https://azzammuhyala.github.io/pyscript"
Source = "https://github.com/azzammuhyala/pyscript"
"Bug Tracker" = "https://github.com/azzammuhyala/pyscript/issues"

[project.optional-dependencies]
other = [
    "beartype",
    "pygments",
    "prompt_toolkit"
]

[tool.setuptools.packages.find]
include = ["pyscript", "pyscript.*"]

[tool.setuptools]
include-package-data = true